--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -25,7 +25,9 @@
                     </a>
                 </div>
                 <div class="media-body">
-                    <h4 class="media-heading" th:text="${question.title}"></h4>
+                    <h4 class="media-heading">
+                        <a th:href="@{/question/{id}(id=${question.getId()})}"  th:text="${question.title}"></a>
+                    </h4>
                     <span th:text="${question.description}"></span><br>
                         <span class="text-desc">
                             <span th:text="${question.commentCount}" th:href="@{/huifu/{id}(id=${question.user.getId()})}"/>个回复
@@ -49,6 +51,7 @@
                         </a>
                     </li>
                     <li th:each="page : ${pageDTO.pages}" th:class="${pageDTO.page == page}?'active':''">
+                        <!--/*@thymesVar id="page" type=""*/-->
                         <a th:href="@{/(page=${page})}" th:text="${page}"></a>
                     </li>
                     <li th:if="${pageDTO.showNext}">
