--- a/src/main/resources/templates/publish.html
+++ b/src/main/resources/templates/publish.html
@@ -55,13 +55,14 @@
                 <h3><span class="glyphicon glyphicon-plus" aria-hidden="true"/> 发起</h3>
                 <hr>
                 <form action="/publish" method="post">
+                    <input type="hidden" name="id" th:value="${id}">
                     <div class="form-group">
                         <label for="title">问题标题（简单扼要）:</label>
                         <input type="text" class="form-control" th:value="${title}" id="title" name="title" placeholder="问题标题.." required>
                     </div>
                     <div class="form-group">
                         <label for="description">问题补充（必填,请参照右侧提示）:</label>
-                        <textarea class="form-control"  th:value="${description}" id="description" name="description" cols="30" rows="10" required></textarea>
+                        <textarea class="form-control"  th:text="${description}" id="description" name="description" cols="30" rows="10" required></textarea>
                     </div>
                     <div class="form-group">
                         <label for="tag">添加标签:</label>
