--- a/src/main/resources/templates/question.html
+++ b/src/main/resources/templates/question.html
@@ -19,14 +19,35 @@
             <h3><span th:text="${question.title}"></span></h3>
             <hr>
             <span class="text-desc">
-               阅读数：<span th:text="${question.viewCount}"/>
-               发布于：<span th:text="${time}"/>
+                作者：<span th:text="${question.user.getName()}">|</span>
+                发布于：<span th:text="${time}">|</span>
+                阅读数：<span th:text="${question.viewCount}"/>
             </span>
+            <hr class="col-lg-12 col-md-12 col-xs-12">
+            <div class="col-lg-12 col-md-12 col-xs-12" th:text="${question.getDescription()}"></div>
+            <hr class="col-lg-12 col-md-12 col-xs-12">
+            <a th:href="@{/publish/{id}(id = ${question.getId})}" class="community-menu" th:if="${session.user.getAccountId() == question.getCreator()}">
+                <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>编辑
+            </a>
+
         </div>
         <div class="col-lg-3 col-md-12 col-sm-12 col-xs-12">
             <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                 <h3>发起人</h3>
+                <div class="media">
+                    <div class="media-left">
+                        <a th:href="@{/question/{id}(id=${question.getId()})}">
+                            <img class="media-object media-object1  img-circle" th:src="${question.user.avatarUrl}" >
+                        </a>
+                    </div>
+                    <div class="media-body">
+                        <h3 class="media-heading">
+                            <span th:text="${question.user.getName()}"></span>
+                        </h3>
+                    </div>
+                </div>
             </div>
+            <hr class="col-lg-12 col-md-12 col-xs-12">
             <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                 <h3>相关问题</h3>
             </div>
