--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -4,9 +4,9 @@
     <title>lpf社区</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <!--    <script src="https://cdn.bootcdn.net/ajax/libs/jquery/3.6.0/jquery.min.js"></script>-->
-    <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/bootstrap-theme.min.css">
-    <link rel="stylesheet" href="css/community.css">
+    <link rel="stylesheet" href="/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/css/bootstrap-theme.min.css">
+    <link rel="stylesheet" href="/css/community.css">
     <script src="js/jquery-3.6.0.min.js"></script>
     <script src="js/bootstrap.min.js" type="application/javascript"></script>
 
@@ -16,7 +16,7 @@
 <div class="container-fluid main">
     <div class="row">
         <div class="col-lg-9 col-md-12 col-sm-12 col-xs-12">
-            <h3><span class="glyphicon glyphicon-list" aria-hidden="true"/>发现</h3>
+            <h3><span class="glyphicon glyphicon-list" aria-hidden="true"></span>发现</h3>
             <hr>
             <div class="media" th:each="question : ${pageDTO.questionDTOS}">
                 <div class="media-left">
@@ -30,9 +30,9 @@
                     </h4>
                     <span th:text="${question.description}"></span><br>
                         <span class="text-desc">
-                            <span th:text="${question.commentCount}" th:href="@{/huifu/{id}(id=${question.user.getId()})}"/>个回复
-                            <span th:text="${question.viewCount}"/>次浏览
-                            <span th:text="${#dates.format(question.gmtCreate,'yyyy-MM-dd HH:mm')}"/>
+                            <span th:text="${question.commentCount}" th:href="@{/huifu/{id}(id=${question.user.getId()})}"></span>个回复
+                            <span th:text="${question.viewCount}"></span>次浏览
+                            <span th:text="${#dates.format(question.gmtCreate,'yyyy-MM-dd HH:mm')}"></span>
                         </span>
                     <a th:href="@{/delect/{id}(id=${question.getId()},idi=${question.user.getId()})}">删除</a>
                 </div>
