--- a/src/main/resources/templates/question.html
+++ b/src/main/resources/templates/question.html
@@ -26,7 +26,7 @@
             <hr class="col-lg-12 col-md-12 col-xs-12">
             <div class="col-lg-12 col-md-12 col-xs-12" th:text="${question.getDescription()}"></div>
             <hr class="col-lg-12 col-md-12 col-xs-12">
-            <a th:href="@{/publish/{id}(id = ${question.getId})}" class="community-menu" th:if="${session.user.getAccountId()!=null && session.user.getAccountId() == question.getCreator()}">
+            <a th:href="@{/publish/{id}(id = ${question.getId})}" class="community-menu" th:if="${session.user!=null && session.user.getAccountId() == question.getCreator()}">
                 <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>编辑
             </a>
 
