--- a/src/main/resources/static/css/community.css
+++ b/src/main/resources/static/css/community.css
@@ -29,3 +29,24 @@ body{
 .jumbotron{
     margin: 100px;
 }
+.media-body{
+    padding-top: 10px;
+}
+.comment{
+    margin: 15px 0;
+}
+.comment-sp{
+    margin-top: 0;
+}
+.menu{
+    color: #999999;
+    margin-top: 10px;
+}
+.menu .icon{
+    margin-right: 6px;
+    font-size: 15px;
+    cursor: pointer;
+}
+.menu .icon:hover{
+    color: #2b669a;
+}
