--- a/src/main/resources/templates/question.html
+++ b/src/main/resources/templates/question.html
@@ -9,13 +9,24 @@
     <link rel="stylesheet" href="/css/community.css">
     <script src="/js/jquery-3.6.0.min.js"></script>
     <script src="/js/bootstrap.min.js" type="application/javascript"></script>
+    <script src="/js/community.js" type="application/javascript"></script>
 
 </head>
+<script type="application/javascript">
+    window.onload = function (){
+        var closable = window.localStorage.getItem("closable");
+        if (closable == "true"){
+            window.close();
+            window.localStorage.removeItem("closable");
+        }
+    }
+</script>
 <body>
 <div th:insert="~{navigation :: nav}"></div>
 <div class="container-fluid main profile">
     <div class="row">
         <div class="col-lg-9 col-md-12 col-sm-12 col-xs-12">
+            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
             <h3><span th:text="${question.title}"></span></h3>
             <hr>
             <span class="text-desc">
@@ -24,7 +35,6 @@
                 阅读数：<span th:text="${question.viewCount}">|</span>
                 点赞数：<span th:text="${question.getLikeCount()}"></span>
                        <a  th:href="@{/dianzan/{id}(id = ${question.getId()})}" th:class="${zan == true}?'':'glyphicon glyphicon-thumbs-up'"></a>
-
             </span>
             <hr class="col-lg-12 col-md-12 col-xs-12">
             <div class="col-lg-12 col-md-12 col-xs-12" th:text="${question.getDescription()}"></div>
@@ -32,8 +42,50 @@
             <a th:href="@{/publish/{id}(id = ${question.getId})}" class="community-menu" th:if="${session.user!=null && session.user.getAccountId() == question.getCreator()}">
                 <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>编辑
             </a>
-
+            </div>
+            <h4 th:text="${question.getCommentCount()}">个回复</h4>
+<!--            回复-->
+            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                <div class="media">
+                    <div class="media-left">
+                        <a th:href="@{/question/{id}(id=${question.getId()})}">
+                            <img class="media-object media-object1  img-circle" th:src="${question.user.avatarUrl}" >
+                        </a>
+                    </div>
+                    <div class="media-body">
+                        <h3 class="media-heading">
+                            <span th:text="${question.user.getName()}"></span>
+                        </h3>
+                        <div class="menu">
+                            <span class="glyphicon glyphicon-thumbs-up icon"></span>
+                            <span class="glyphicon glyphicon-comment icon"></span>
+                            <span class="pull-right" th:text="${time}"></span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+<!--            回复输入框-->
+            <hr class="col-lg-12 col-md-12 col-xs-12 comment-sp">
+            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12" id="comment_section">
+                <div class="media">
+                    <div class="media-left">
+                        <a th:href="@{/question/{id}(id=${question.getId()})}">
+                            <img class="media-object media-object1  img-circle" th:src="${question.user.avatarUrl}" >
+                        </a>
+                    </div>
+                    <div class="media-body">
+                        <h3 class="media-heading">
+                            <span th:text="${question.user.getName()}"></span>
+                        </h3>
+                    </div>
+                </div>
+                <input type="hidden" id="question_id" th:value="${question.id}">
+                <textarea class="form-control comment" rows="6" id="comment_content"></textarea>
+                <button type="button" class="btn-publish btn btn-success" onclick="post()">回复</button>
+            </div>
         </div>
+
+
         <div class="col-lg-3 col-md-12 col-sm-12 col-xs-12">
             <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                 <h3>发起人</h3>
