--- a/src/main/resources/templates/question.html
+++ b/src/main/resources/templates/question.html
@@ -45,21 +45,22 @@
             </div>
             <h4 th:text="${question.getCommentCount()}">个回复</h4>
 <!--            回复-->
-            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12" th:each="comment :${comments}">
                 <div class="media">
                     <div class="media-left">
-                        <a th:href="@{/question/{id}(id=${question.getId()})}">
-                            <img class="media-object media-object1  img-circle" th:src="${question.user.avatarUrl}" >
+                        <a>
+                            <img class="media-object media-object1  img-circle" th:src="${comment.user.avatarUrl}" >
                         </a>
                     </div>
                     <div class="media-body">
                         <h3 class="media-heading">
-                            <span th:text="${question.user.getName()}"></span>
+                            <span th:text="${comment.user.getName()}"></span>
                         </h3>
+                        <div th:text="${comment.getContent()}"></div>
                         <div class="menu">
-                            <span class="glyphicon glyphicon-thumbs-up icon"></span>
+                            <a  th:href="@{/dianzan1/{id}/{idi}(id = ${question.getId()} ,idi = ${comment.getId()})}" th:class="${zan1 == true}?'':'glyphicon glyphicon-thumbs-up icon'"></a>
                             <span class="glyphicon glyphicon-comment icon"></span>
-                            <span class="pull-right" th:text="${time}"></span>
+                            <span class="pull-right" th:text="${#dates.format(comment.gmtCreate,'MM-dd')}"></span>
                         </div>
                     </div>
                 </div>
