--- a/src/main/resources/static/css/community.css
+++ b/src/main/resources/static/css/community.css
@@ -50,3 +50,18 @@ body{
 .menu .icon:hover{
     color: #2b669a;
 }
+.comments {
+    padding-bottom: 25px;
+    margin-bottom: 25px;
+    border-bottom: 1px solid #0f0f0f;
+}
+.sub-comments{
+    border-radius: 5px;
+    margin-top: 10px;
+    border: 1px solid #eeeeee;
+    padding-top: 15px;
+    margin-bottom: 15px;
+}
+.he{
+    height: 50px;
+}
