--- a/src/main/resources/templates/question.html
+++ b/src/main/resources/templates/question.html
@@ -39,6 +39,14 @@
             </span>
             <hr class="col-lg-12 col-md-12 col-xs-12">
             <div class="col-lg-12 col-md-12 col-xs-12" th:text="${question.getDescription()}"></div>
+
+            <hr class="col-lg-12 col-md-12 col-xs-12">
+            <div class="col-lg-12 col-md-12 col-xs-12">
+                <span class="label label-info" th:each="tag : ${question.tag.split(',')}">
+                    <span class="label label-info" th:text="${tag}"></span>
+                </span>
+            </div>
+
             <hr class="col-lg-12 col-md-12 col-xs-12">
             <a th:href="@{/publish/{id}(id = ${question.getId})}" class="community-menu" th:if="${session.user!=null && session.user.getAccountId() == question.getCreator()}">
                 <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>编辑
@@ -113,6 +121,9 @@
             <hr class="col-lg-12 col-md-12 col-xs-12">
             <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                 <h3>相关问题</h3>
+                <ul th:each="related : ${relatedQuestions}">
+                    <a th:href="@{/question/{id}(id = ${related.id})}" th:text="${related.title}"></a>
+                </ul>
             </div>
         </div>
     </div>
