--- a/src/main/resources/templates/huifu.html
+++ b/src/main/resources/templates/huifu.html
@@ -39,7 +39,7 @@
                     </ul>
                 </li>
                 <li th:if="${session.user==null}">
-                    <a href="https://gitee.com/oauth/authorize?client_id=266407dfe065073d7c2b9b75183a9558ee8b6661b6587fc88e20277cbe2b6d3a&redirect_uri=http://localhost:8888/callback&response_type=code&state=1">登录</a>
+                    <a href="https://gitee.com/oauth/authorize?client_id=266407dfe065073d7c2b9b75183a9558ee8b6661b6587fc88e20277cbe2b6d3a&redirect_uri=http://121.40.218.249:8888/callback&response_type=code&state=1">登录</a>
                 </li>
             </ul>
         </div>
