--- a/src/main/resources/templates/publish.html
+++ b/src/main/resources/templates/publish.html
@@ -43,7 +43,7 @@
                     </ul>
                 </li>
                 <li th:if="${session.user==null}">
-                    <a href="https://gitee.com/oauth/authorize?client_id=266407dfe065073d7c2b9b75183a9558ee8b6661b6587fc88e20277cbe2b6d3a&redirect_uri=http://localhost:8888/callback&response_type=code&state=1">登录</a>
+                    <a href="https://gitee.com/oauth/authorize?client_id=266407dfe065073d7c2b9b75183a9558ee8b6661b6587fc88e20277cbe2b6d3a&redirect_uri=http://121.40.218.249:8888/callback&response_type=code&state=1">登录</a>
                 </li>
             </ul>
         </div>
@@ -53,7 +53,6 @@
         <div class="row">
             <div class="col-lg-9 col-md-12 col-sm-12 col-xs-12">
                 <h3><span class="glyphicon glyphicon-plus" aria-hidden="true"/> 发起</h3>
-                <hr>
                 <form action="/publish" method="post">
                     <input type="hidden" name="id" th:value="${id}">
                     <div class="form-group">
@@ -68,6 +67,7 @@
                         <label for="tag">添加标签:</label>
                         <input type="text" class="form-control" th:value="${tag}" id="tag" name="tag" placeholder="输入标签,以逗号分隔" required>
                     </div>
+                    <hr>
                         <span class="alert alert-danger" th:text="${error}" th:if="${error != null}"/>
                     <button type="submit" class="btn btn-success btn-publish">发布</button>
                 </form>
