--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -200,7 +200,7 @@
             text-align: center;
             cursor: pointer;
             -webkit-transition: all .3s;
-
+            line-height: inherit;
             transition: all .3s;
         }
 
@@ -213,6 +213,27 @@
             display: -webkit-flex;
 
             display: flex;
+        }
+
+        .text-muted {
+            color: white;
+            margin-top: 20px;
+            font-size: 16px;
+        }
+
+        .img {
+            width: 150px;
+            height: 3px;
+        }
+
+        .img_div {
+            margin-top: 20px;
+        }
+
+        .gitub {
+            height: 33px;
+            width: 33px;
+            border-radius: 50%;
         }
     </style>
 </head>
@@ -235,24 +256,37 @@
                     <div class="form_login">
                         <div class="form">
                             <div>
-                                <div class="type-tab">
-                                    <span class="active">密码登录</span>
-                                    <span class="">短信登录</span>
-                                </div>
-                                <div>
-                                    <div class="status-box">
-                                        <input type="text"  value="你的手机号/邮箱"/>
-                                        <div class="text"></div>
+                                <form action="/telephoneLogin" method="post">
+
+
+                                    <div class="type-tab">
+                                        <span class="active">密码登录</span>
+                                        <span class="">短信登录</span>
                                     </div>
-                                    <div class="status-box">
-                                        <input type="text"  value="密码"/>
-                                        <div class="text"></div>
+                                    <div>
+                                        <div class="status-box">
+                                            <input type="text" th:value="${telephone}" id="telephone" name="telephone"
+                                                   value="你的手机号/邮箱"/>
+                                            <div class="text"></div>
+                                        </div>
+                                        <div class="status-box">
+                                            <input type="password" th:value="${password}" id="password" name="password"
+                                                   value="密码(方便测试密码默认自动保存)"/>
+                                            <div class="text"></div>
+                                        </div>
                                     </div>
+                                    <div class="btn-box">
+                                        <button type="submit" class="btn btn-login">登录</button>
+                                        <a th:href="@{/toRegister}" class="btn btn-reg">注册</a>
+                                    </div>
+                                </form>
+                                <div class="img_div">
+                                    <img src="/img/hengXian.png" class="img"><span class="text-muted">其他方式登录</span><img
+                                        src="/img/hengXian.png" class="img">
                                 </div>
-                                <div class="btn-box">
-                                    <a class="btn btn-login">登录</a>
-                                    <a th:href="@{/toRegister}" class="btn btn-reg">注册</a>
-                                </div>
+                                <a href="https://gitee.com/oauth/authorize?client_id=266407dfe065073d7c2b9b75183a9558ee8b6661b6587fc88e20277cbe2b6d3a&redirect_uri=http://121.40.218.249:8888/callback&response_type=code&state=1">
+                                    <img src="/img/gitub.jpg" class="gitub">
+                                </a>
                             </div>
                         </div>
                     </div>
