--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -144,6 +144,11 @@
 				border-color: #ebeef5;
 			}
 		</style>
+		<script>
+			var error = `[[${error}]]`
+			alert(error)
+
+		</script>
 	</head>
 	<body>
 	<div th:insert="~{navigation :: nav}"></div>
@@ -153,27 +158,27 @@
 					<span class="tit" style="font-size: 38px;">注册</span>
 				</div>
 				<div class="register-container">
-					<form action="" method="post">
+					<form action="/register" method="post">
 						<div class="form-group">
 							<div class="el-input">
-								<input type="text" placeholder="昵称" class="el-input__inner">
+								<input type="text" th:value="${username}" id="username" name="username" placeholder="昵称" class="el-input__inner">
 							</div>
 							<p class="error-message"></p>
 						</div>
 						<div class="register-hidden-gruop"></div>
 						<div class="form-group">
 							<div class="el-input">
-								<input type="text" placeholder="密码" class="el-input__inner">
+								<input type="text" th:value="${password}" id="password" name="password" placeholder="密码" class="el-input__inner">
 							</div>
 							<p class="error-message"></p>
 						</div>
 						<div class="register-hidden-gruop"></div>
 						<div class="form-group">
-							<input type="text" placeholder="填写常用手机号" class="el-input__inner">
+							<input type="text" th:value="${telephone}" id="telephone" name="telephone" placeholder="填写常用手机号" class="el-input__inner">
 						</div>
 						<div class="register-hidden-gruop"></div>
 						<div class="form-group">
-							<button type="button" class="button">
+							<button type="submit" class="button">
 								<span>注册</span>
 							</button>
 						</div>
