--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title>lpf社区</title>
+    <title th:text="${sectionName}"></title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <!--    <script src="https://cdn.bootcdn.net/ajax/libs/jquery/3.6.0/jquery.min.js"></script>-->
     <link rel="stylesheet" href="/css/bootstrap.min.css">
     <link rel="stylesheet" href="/css/bootstrap-theme.min.css">
     <link rel="stylesheet" href="/css/community.css">
-    <script src="js/jquery-3.6.0.min.js"></script>
-    <script src="js/bootstrap.min.js" type="application/javascript"></script>
+    <script src="/js/jquery-3.6.0.min.js"></script>
+    <script src="/js/bootstrap.min.js" type="application/javascript"></script>
     <style type="text/css">
         ::-webkit-scrollbar {
             display: none;
@@ -236,52 +236,67 @@
             border-radius: 50%;
         }
     </style>
-    <script>
-        function sendCode(){
-            var memPhone = $("#telephone").val();
-            console.log(memPhone.length);
-            if(memPhone == '' || memPhone.length != 11){
-                console.log("请输入正确的手机号！");
-                return;
-            }else{
-                $.ajax({
-                    type: 'GET',
-                    url: '/fitness/code',
-                    data: {
-                        memPhone : memPhone
-                    },
-                    dataType: 'json',
-                    success: function(data) {
-                        if(data){
-                            timer();
-                        }else{
-                            console.log("获取验证码失败");
-                        }
-                    },
-                    error: function(data) {
-                        console.log('连接超时！');
-                    },
-                });
-            }
-        }
+<!--    <script>-->
+<!--        function sendCode() {-->
+<!--            var memPhone = $("#telephone").val();-->
+<!--            console.log(memPhone.length);-->
+<!--            if (memPhone == '' || memPhone.length != 11) {-->
+<!--                console.log("请输入正确的手机号！");-->
+<!--                return;-->
+<!--            } else {-->
+<!--                $.ajax({-->
+<!--                    type: 'GET',-->
+<!--                    url: '/fitness/code',-->
+<!--                    data: {-->
+<!--                        memPhone: memPhone-->
+<!--                    },-->
+<!--                    dataType: 'json',-->
+<!--                    success: function (data) {-->
+<!--                        if (data) {-->
+<!--                            timer();-->
+<!--                        } else {-->
+<!--                            console.log("获取验证码失败");-->
+<!--                        }-->
+<!--                    },-->
+<!--                    error: function (data) {-->
+<!--                        console.log('连接超时！');-->
+<!--                    },-->
+<!--                });-->
+<!--            }-->
+<!--        }-->
 
-        var wait = 60;
-        //倒计时
-        function timer() {
-            if(wait == 0){
-                $("#sendBtn").val("获取验证码");
-                $("#sendBtn").removeAttr("disabled");
-                $("#sendBtn").css("border-color","1e9fff").css("background", "#ffffff").css("cursor", "pointer");
-                wait = 60;
-            }else{
-                $("#sendBtn").attr("disabled","true");
-                $("#sendBtn").css("border-color","fbfbfb").css("background", "#ccc").css("cursor", "not-allowed");
-                $("#sendBtn").val(wait + "秒后重发");
-                wait--;
-                setTimeout(function() {timer()}, 1000);
-            }
-        }
-    </script>
+<!--        var wait = 60;-->
+
+<!--        //倒计时-->
+<!--        function timer() {-->
+<!--            if (wait == 0) {-->
+<!--                $("#sendBtn").val("获取验证码");-->
+<!--                $("#sendBtn").removeAttr("disabled");-->
+<!--                $("#sendBtn").css("border-color", "1e9fff").css("background", "#ffffff").css("cursor", "pointer");-->
+<!--                wait = 60;-->
+<!--            } else {-->
+<!--                $("#sendBtn").attr("disabled", "true");-->
+<!--                $("#sendBtn").css("border-color", "fbfbfb").css("background", "#ccc").css("cursor", "not-allowed");-->
+<!--                $("#sendBtn").val(wait + "秒后重发");-->
+<!--                wait&#45;&#45;;-->
+<!--                setTimeout(function () {-->
+<!--                    timer()-->
+<!--                }, 1000);-->
+<!--            }-->
+<!--        }-->
+
+<!--    </script>-->
+<!--    <script>-->
+<!--        let isPhone=false;-->
+<!--        function activeOne(val){-->
+<!--            if(val===1) isPhone=true-->
+<!--            else isPhone=false;-->
+<!--        }-->
+
+<!--        function isActive() {-->
+<!--            return isPhone;-->
+<!--        }-->
+<!--    </script>-->
 </head>
 <body>
 <div th:insert="~{navigation :: nav}"></div>
@@ -302,52 +317,74 @@
                     <div class="form_login">
                         <div class="form">
                             <div>
+                                <div class="type-tab">
+                                    <a th:href="@{/log}"><span class="active">手机密码登录</span></a>
+                                    <a th:href="@{/log2}"><span class="active" >邮箱/短信登录</span></a>
+                                </div>
+                                <div th:if="${st1 == 1}">
+                                    <form action="/telephoneLogin" method="post" >
+                                        <div >
+                                            <div class="status-box">
+                                                <input type="text" th:value="${telephone}" id="telephone" name="telephone"
+                                                       placeholder="你的手机号/邮箱"/>
+                                                <div class="text"></div>
+                                            </div>
+                                            <div class="status-box">
+                                                <input type="password" th:value="${password}" id="password" name="password"
+                                                       placeholder="(方便测试密码默认自动保存)"/>
+                                                <div class="text"></div>
+                                            </div>
+                                        </div>
+                                        <div class="btn-box">
+                                            <button type="submit" class="btn btn-login">登录</button>
+                                            <a th:href="@{/toRegister}" class="btn btn-reg">注册</a>
+                                        </div>
+                                    </form>
+                                </div>
+                                <div th:if="${st2 == 2}">
+
                                 <form action="/telephoneLogin" method="post">
+                                       <div >
+                                           <div class="status-box">
+                                               <input type="text" th:value="${telephone}" id="telephone" name="telephone"
+                                                      placeholder="你的手机号/邮箱"/>
+                                               <div class="text"></div>
+                                           </div>
+                                           <div class="status-box">
+                                               <input type="password" th:value="${password}" id="password" name="password"
+                                                      placeholder="密码(方便测试密码默认自动保存)"/>
+                                               <div class="text"></div>
+                                           </div>
+                                       </div>
+                                       <div class="btn-box">
+                                           <button type="submit" class="btn btn-login">登录</button>
+                                           <a th:href="@{/toRegister}" class="btn btn-reg">注册</a>
+                                       </div>
+                                   </form>
+                               </div>
 
-
-                                    <div class="type-tab">
-                                        <span class="active">密码登录</span>
-                                        <span class="">短信登录</span>
-                                    </div>
-                                    <div>
-                                        <div class="status-box">
-                                            <input type="text" th:value="${telephone}" id="telephone" name="telephone"
-                                                   value="你的手机号/邮箱" />
-                                            <div class="text"></div>
-                                        </div>
-                                        <div class="status-box">
-                                            <input type="password" th:value="${password}" id="password" name="password"
-                                                   value="密码(方便测试密码默认自动保存)"/>
-                                            <div class="text"></div>
-                                        </div>
-                                        <div class="layui-form-item input-item">
-                                            <label for="YZName">验证码</label>
-                                            <input type="text" placeholder="请输入验证码" autocomplete="off" id="code" name="code" maxlength="6" class="layui-input" style="width: 50%;display: inline">
-                                            <input type="button" class="layui-btn layui-btn-primary" value="获取验证码" id="sendBtn" style="width:41%;margin-left: 18px;border-color:#1e9fff !important;" onclick="sendCode(this)"></input>
-                                        </div>
-
-                                    </div>
-                                    <div class="btn-box">
-                                        <button type="submit" class="btn btn-login">登录</button>
-                                        <a th:href="@{/toRegister}" class="btn btn-reg">注册</a>
-                                    </div>
-                                </form>
                                 <div class="img_div">
-                                    <img src="/img/hengXian.png" class="img"><span class="text-muted">其他方式登录</span><img
+                                    <img src="/img/hengXian.png" class="img"><span class="text-muted">其方式登录</span><img
                                         src="/img/hengXian.png" class="img">
                                 </div>
                                 <a href="https://gitee.com/oauth/authorize?client_id=266407dfe065073d7c2b9b75183a9558ee8b6661b6587fc88e20277cbe2b6d3a&redirect_uri=http://121.40.218.249:8888/callback&response_type=code&state=1">
                                     <img src="/img/gitub.jpg" class="gitub">
                                 </a>
                             </div>
+
                         </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-
+    <script>
+        var phone = `[[${st1}]]`
+        var phone1 = `[[${st2}]]`
+        console.log(phone + "ss" + phone1)
+    </script>
 
 </section>
+
 </body>
 </html>
