--- a/src/main/resources/templates/navigation.html
+++ b/src/main/resources/templates/navigation.html
@@ -8,7 +8,20 @@
     <link rel="stylesheet" href="css/community.css">
     <script src="js/jquery-3.6.0.min.js"></script>
     <script src="js/bootstrap.min.js" type="application/javascript"></script>
+    <script>
+        function geRen() {
 
+            $.ajax({
+                type: 'GET',
+                url: '/personalInformation',
+                data: {
+                    xiugai: "0"
+                },
+                dataType: 'json',
+            });
+
+        }
+    </script>
 </head>
 <body>
 <nav class="navbar navbar-default">
@@ -34,7 +47,8 @@
                         </span><span class="caret"></span>
                     </a>
                     <ul class="dropdown-menu">
-                        <li><a th:href="@{/profile/question/(page=1)}">个人中心</a></li>
+<!--                        <li><a th:href="@{/profile/question/(page=1)}">个人中心</a></li>-->
+                        <li><a href="/personalInformation?xiugai=0">个人中心</a></li>
                         <li><a href="/homePage">个人主页</a></li>
                         <li><a href="/login">退出登录</a></li>
                     </ul>
